--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-svg": "^10.1.0"
+    "react-native-svg": "^10.1.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
