--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,4 +35,7 @@ target 'dice' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
   use_native_modules!
+
+  pod 'react-native-shake', :path => '../node_modules/react-native-shake'
+
 end
