--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-native-vector-icons": "^6.4.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-shake": "^3.4.0",
     "react-native-svg": "^10.1.0",
     "react-native-vector-icons": "^6.6.0"
   },
