--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,4 +38,6 @@ target 'dice' do
 
   pod 'react-native-shake', :path => '../node_modules/react-native-shake'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
 end
