--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-shake": "^3.4.0",
+    "react-native-sound": "^0.11.0",
     "react-native-svg": "^10.1.0",
     "react-native-vector-icons": "^6.6.0"
   },
