--- a/ios/dice/Info.plist
+++ b/ios/dice/Info.plist
@@ -6,6 +6,10 @@
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>DndDice</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array><string>itms-apps</string></array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
